--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
-  <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="AutoMapper" version="10.0.0" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.17.0" targetFramework="net461" />
 </packages>
